--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo da Velha</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <h1>Jogo da Velha</h1>
@@ -22,6 +22,6 @@
     <button id="restartBtn">Reiniciar Jogo</button>
     <p id="status"></p>
 
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
